# qadir-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  config.dev.toml  config.py  config.toml  main.py  pyproject.toml  requirements.txt  test_loot_logic.py
cogs/: activities.py  activity.py  events.py  hangar.py  loot.py  proposals.py  utility.py  voice.py
core/: __init__.py  bot.py  embeds.py  utils.py
modals/: __init__.py  add_loot.py  create_event.py  create_proposal.py  proposals.py
models/: activities.py  activity.py  events.py  hangar.py  proposals.py
utils/: __init__.py  common.py  embeds.py  enums.py
utils/embeds/: __init__.py  common.py  event.py  hangar.py
utils/modals/: add_loot.py  create_event.py  create_proposal.py
utils/views/: __init__.py  event_selection.py  voting.py
views/: __init__.py  voting.py
