[project]
name = "qadir-bot"
version = "1.0.0"
description = "A modular utility bot for Discord"
authors = [
    {name = "Bilal",email = "mail@bil.al"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "py-cord[speed] (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "upstash-redis (>=1.4.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140