[project]
name = "qadir-bot"
version = "3.0.0.dev1"
description = "A modular utility bot for Discord"
authors = [{ name = "Bilal", email = "mail@bil.al" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "py-cord[speed] (>=2.7.0rc1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "upstash-redis (>=1.4.0,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 140
